Fixed Carousel Issues
- Fixed carousel issues
- Still need to fix typography and layout issues

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -301,7 +301,10 @@
   font-family: 'Lato', sans-serif;
   font-size: 2rem;
   text-align: center;
-  padding-bottom: 3rem; }
+  padding-bottom: 3rem;
+  position: absolute;
+  bottom: 0;
+  transform: translateX(-50%); }
   .menu-link a {
     color: #fff;
     margin: 5rem;
@@ -323,7 +326,8 @@
 .carousel-container {
   margin: 0 auto;
   overflow: hidden;
-  width: 80%; }
+  width: 80%;
+  height: 50rem; }
 
 .flex-container {
   text-align: center;
@@ -504,7 +508,8 @@
 .carousel-section {
   width: 100%;
   background-color: #819999;
-  position: relative; }
+  position: relative;
+  padding: 0 0 9rem 0; }
 
 .main-menu {
   font-family: 'Open Sans', sans-serif;
